[package]
name = "propelauth"
version = "0.10.0"
authors = ["support@propelauth.com"]
description = "A Rust crate for managing authentication and authorization with support for multi-tenant / B2B products, powered by PropelAuth"
keywords = ["authentication", "auth", "authorization", "b2b", "tenant"]
categories = ["authentication"]
homepage = "https://www.propelauth.com"
license = "MIT"
edition = "2018"

[dependencies]
actix-web = { version = "4", optional = true }
axum_06 = { package = "axum", version = "^0.6", optional = true }
axum_07 = { package = "axum", version = "^0.7", optional = true }
chrono = "0.4.23"
jsonwebtoken = "8.1.1"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
thiserror = "^1.0"
tower = { version = "^0.4", optional = true }
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }
hex = "0.4.3"

[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]

[dev-dependencies]
openssl = "0.10.43"

[features]
axum06 = ["dep:axum_06", "dep:tower"]
axum07 = ["dep:axum_07", "dep:tower"]
actix4 = ["dep:actix-web"]
