[package]
name = "propelauth"
version = "0.23.0"
authors = ["support@propelauth.com"]
description = "A Rust crate for managing authentication and authorization with support for multi-tenant / B2B products, powered by PropelAuth"
keywords = ["authentication", "auth", "authorization", "b2b", "tenant"]
categories = ["authentication"]
homepage = "https://www.propelauth.com"
repository = "https://github.com/PropelAuth/rust/"
license = "MIT"
edition = "2018"

[dependencies]
actix-web = { version = "4", optional = true }
axum_06 = { package = "axum", version = "^0.6", optional = true }
axum_07 = { package = "axum", version = "^0.7", optional = true }
axum_08 = { package = "axum", version = "^0.8", optional = true }
chrono = "0.4.39"
jsonwebtoken = "8.3.0"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
thiserror = "^2.0"
tower = { version = "^0.5", optional = true }
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }
hex = "0.4.3"

[dependencies.reqwest]
version = "^0.12"
default-features = false

[dev-dependencies]
openssl = "0.10.68"

[features]
default = ["reqwest/default", "__reqwest"]
rustls = ["__reqwest", "reqwest/rustls-tls", "reqwest/http2", "reqwest/charset"]
axum06 = ["dep:axum_06", "dep:tower"]
axum07 = ["dep:axum_07", "dep:tower"]
axum08 = ["dep:axum_08", "dep:tower"]
actix4 = ["dep:actix-web"]
__reqwest = ["reqwest/json", "reqwest/multipart"]

[lib]
doctest = false
